// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress medium size renders correctly 1`] = `
<div
  aria-valuenow={0}
  className="rovna-ui-progress rovna-ui-progress-status-normal rovna-ui-progress-line rovna-ui-progress-show-info rovna-ui-progress-default css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-progress"
  role="progressbar"
  style={{}}
>
  <div
    className="rovna-ui-progress-outer"
    style={
      {
        "height": 8,
        "width": "100%",
      }
    }
  >
    <div
      className="rovna-ui-progress-inner"
      style={
        {
          "backgroundColor": undefined,
          "borderRadius": undefined,
        }
      }
    >
      <div
        className="rovna-ui-progress-bg"
        style={
          {
            "backgroundColor": undefined,
            "borderRadius": undefined,
            "clipPath": "inset(0 100% 0 0 round 100px)",
            "height": 8,
            "width": "100%",
          }
        }
      />
    </div>
  </div>
  <span
    className="rovna-ui-progress-text"
    title="0%"
  >
    0%
  </span>
</div>
`;

exports[`Progress small size renders correctly 1`] = `
<div
  aria-valuenow={0}
  className="rovna-ui-progress rovna-ui-progress-status-normal rovna-ui-progress-line rovna-ui-progress-show-info rovna-ui-progress-small css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-progress"
  role="progressbar"
  style={{}}
>
  <div
    className="rovna-ui-progress-outer"
    style={
      {
        "height": 6,
        "width": "100%",
      }
    }
  >
    <div
      className="rovna-ui-progress-inner"
      style={
        {
          "backgroundColor": undefined,
          "borderRadius": undefined,
        }
      }
    >
      <div
        className="rovna-ui-progress-bg"
        style={
          {
            "backgroundColor": undefined,
            "borderRadius": undefined,
            "clipPath": "inset(0 100% 0 0 round 100px)",
            "height": 6,
            "width": "100%",
          }
        }
      />
    </div>
  </div>
  <span
    className="rovna-ui-progress-text"
    title="0%"
  >
    0%
  </span>
</div>
`;
